k8s/booking-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: booking
  template:
    metadata:
      labels:
        app: booking
    spec:
      containers:
        - name: booking
          image: project-root-booking:latest
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 5002

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
