k8s/booking-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: booking-service
spec:
  selector:
    app: booking
  ports:
    - protocol: TCP
      port: 5002
      targetPort: 5002
      nodePort: 30007   # ✅ fixed port (optional but better)
  type: NodePort
