k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:

          # 🔹 AI SERVICE
          - path: /api/ai(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: ai-service
                port:
                  number: 8000

          # 🔹 BOOKING SERVICE
          - path: /api/bookings(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: booking-service
                port:
                  number: 5002

          # 🔹 AUTH SERVICE (NEW)
          - path: /api/auth(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-service
                port:
                  number: 5001
